# grpc-alsa

./: .gitignore  CMakeLists.txt  README.md  alsawrapper.cc  alsawrapper.h  client.cc  server.cc
doc/: architecture.gliffy
protos/: grpc-alsa.proto  grpcalsa.proto
